{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 50,
  "lineage": "8cff084c-2bb1-f230-9f4f-6f4ddc01823b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:905418420681:instance/i-0153dbc130cf7c487",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0153dbc130cf7c487",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b0bb7104ad146f1",
            "private_dns": "ip-10-1-1-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.57",
            "public_ip": "13.200.251.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0669029453813531d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b68e4cfb0744155d",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fff337dc9636d88f"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "build-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:905418420681:instance/i-0859205f73e6a1ab3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0859205f73e6a1ab3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0faa7d00fae5414bd",
            "private_dns": "ip-10-1-1-132.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.132",
            "public_ip": "13.127.129.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a74823512e4460f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b68e4cfb0744155d",
            "tags": {
              "Name": "build-slave"
            },
            "tags_all": {
              "Name": "build-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fff337dc9636d88f"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:905418420681:instance/i-01db2d0a2233ff65f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01db2d0a2233ff65f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1870c5ba7a7d34a",
            "private_dns": "ip-10-1-1-229.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.229",
            "public_ip": "15.207.51.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00989bab5e7010738",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b68e4cfb0744155d",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fff337dc9636d88f"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:internet-gateway/igw-0dd4affab6c2ef6c8",
            "id": "igw-0dd4affab6c2ef6c8",
            "owner_id": "905418420681",
            "tags": {
              "Name": "dpp-igw"
            },
            "tags_all": {
              "Name": "dpp-igw"
            },
            "vpc_id": "vpc-086ac1d78e1fdec1b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dpp-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:route-table/rtb-053d7e566f481a9eb",
            "id": "rtb-053d7e566f481a9eb",
            "owner_id": "905418420681",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd4affab6c2ef6c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-086ac1d78e1fdec1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f92dd75036cb7c8",
            "route_table_id": "rtb-053d7e566f481a9eb",
            "subnet_id": "subnet-0b68e4cfb0744155d"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e249294677d6291",
            "route_table_id": "rtb-053d7e566f481a9eb",
            "subnet_id": "subnet-04bacfc6bfbf87d41"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-02",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:security-group/sg-0fff337dc9636d88f",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fff337dc9636d88f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SHH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "905418420681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-prot"
            },
            "tags_all": {
              "Name": "ssh-prot"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ac1d78e1fdec1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:subnet/subnet-0b68e4cfb0744155d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b68e4cfb0744155d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418420681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-01"
            },
            "tags_all": {
              "Name": "dpp-public-subent-01"
            },
            "vpc_id": "vpc-086ac1d78e1fdec1b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:subnet/subnet-04bacfc6bfbf87d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bacfc6bfbf87d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418420681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-02"
            },
            "tags_all": {
              "Name": "dpp-public-subent-02"
            },
            "vpc_id": "vpc-086ac1d78e1fdec1b"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418420681:vpc/vpc-086ac1d78e1fdec1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-067bb975ea15f960d",
            "default_route_table_id": "rtb-0974ad9f764e80793",
            "default_security_group_id": "sg-030edc207f8f36730",
            "dhcp_options_id": "dopt-06f96215dd59b6b05",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086ac1d78e1fdec1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0974ad9f764e80793",
            "owner_id": "905418420681",
            "tags": {
              "Name": "dpp-vpc"
            },
            "tags_all": {
              "Name": "dpp-vpc"
            }
          }
        }
      ]
    }
  ]
}